--- a/src/Huskui.Avalonia/Controls/Drawer.axaml
+++ b/src/Huskui.Avalonia/Controls/Drawer.axaml
@@ -1,24 +1,22 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="https://github.com/d3ara1n/Huskui.Avalonia"
-                    xmlns:icons="using:Huskui.Avalonia.Icons">
+                    xmlns:fi="clr-namespace:FluentIcons.Avalonia;assembly=FluentIcons.Avalonia">
 
     <ControlTheme x:Key="{x:Type local:Drawer}" TargetType="local:Drawer">
         <Setter Property="Background" Value="{StaticResource ControlBackgroundBrush}" />
         <Setter Property="BorderBrush" Value="{StaticResource ControlBorderBrush}" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="CornerRadius" Value="{StaticResource OverlayCornerRadius}" />
+        <Setter Property="CornerRadius" Value="{StaticResource MediumCornerRadius}" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="MinWidth" Value="200" />
         <Setter Property="MinHeight" Value="100" />
-        <Setter Property="Width" Value="400" />
-        <Setter Property="Height" Value="300" />
         <Setter Property="Template">
             <ControlTemplate>
                 <Border Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
-                        CornerRadius="{TemplateBinding CornerRadius, Converter={StaticResource TopCornerRadiusConverter}}"
+                        CornerRadius="{TemplateBinding CornerRadius, Converter={x:Static local:CornerRadiusConverters.Upper}}"
                         BoxShadow="0 0 20 0 #20000000">
                     <Grid RowDefinitions="Auto,*">
                         <!-- Header -->
@@ -26,97 +24,88 @@
                               Grid.Row="0"
                               Height="{TemplateBinding HeaderHeight}"
                               Background="Transparent"
-                              ColumnDefinitions="Auto,*,Auto,Auto">
-                            
+                              VerticalAlignment="Center"
+                              ColumnDefinitions="Auto,*,Auto,Auto" Margin="12,0" ColumnSpacing="12">
+
                             <!-- Drag Handle Icon -->
-                            <PathIcon Data="M 4 8 L 20 8 M 4 16 L 20 16" 
-                                      Width="16" Height="16" 
-                                      Margin="12,0,0,0"
-                                      Foreground="{StaticResource ControlForegroundBrush}"
-                                      Opacity="0.5"
-                                      VerticalAlignment="Center"/>
+
+                            <fi:SymbolIcon Grid.Column="0" Symbol="ReOrderDotsVertical"
+                                           FontSize="{StaticResource MediumFontSize}" />
 
                             <!-- Title -->
                             <TextBlock Grid.Column="1"
                                        Text="{TemplateBinding Title}"
-                                       VerticalAlignment="Center"
                                        Margin="12,0"
-                                       FontWeight="SemiBold"
-                                       IsHitTestVisible="False"/>
+                                       VerticalAlignment="Center"
+                                       FontWeight="{StaticResource ControlStrongFontWeight}"
+                                       IsHitTestVisible="False" />
 
                             <!-- Toggle Button -->
-                            <Button Name="{x:Static local:Drawer.PART_ToggleStateButton}"
-                                    Grid.Column="2"
-                                    Theme="{StaticResource TransparentButtonTheme}"
-                                    Padding="8"
-                                    Margin="0,0,4,0">
-                                <PathIcon Data="M 4 14 L 12 6 L 20 14" 
-                                          Width="12" Height="12"
-                                          Name="ToggleIcon"/>
-                            </Button>
+                            <ToggleButton
+                                Grid.Column="2"
+                                Padding="12,0"
+                                IsChecked="{TemplateBinding IsOpen,Mode=TwoWay}"
+                                Theme="{StaticResource GhostButtonTheme}">
+                                <fi:SymbolIcon Name="ToggleIcon" Symbol="ChevronDown"
+                                               FontSize="{StaticResource SmallFontSize}" />
+                            </ToggleButton>
 
                             <!-- Close Button -->
                             <Button Name="{x:Static local:Drawer.PART_CloseButton}"
                                     Grid.Column="3"
-                                    Theme="{StaticResource TransparentButtonTheme}"
-                                    Padding="8"
-                                    Margin="0,0,4,0">
-                                <PathIcon Data="M 6 6 L 18 18 M 6 18 L 18 6" 
-                                          Width="12" Height="12"/>
+                                    Theme="{StaticResource GhostButtonTheme}"
+                                    Padding="12,0">
+                                <fi:SymbolIcon Symbol="Dismiss" FontSize="{StaticResource SmallFontSize}" />
                             </Button>
                         </Grid>
 
                         <!-- Content -->
                         <ContentPresenter Grid.Row="1"
+                                          Background="{StaticResource OverlaySolidBackgroundBrush}"
                                           Content="{TemplateBinding Content}"
                                           ContentTemplate="{TemplateBinding ContentTemplate}"
-                                          Margin="{TemplateBinding Padding}"/>
+                                          Margin="{TemplateBinding Padding}" />
 
                         <!-- Resize Handles -->
-                        <Border Name="{x:Static local:Drawer.PART_ResizeLeft}"
+                        <Border Grid.Row="0"
+                                Name="{x:Static local:Drawer.PART_ResizeLeft}"
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Stretch"
                                 Width="4"
                                 Background="Transparent"
                                 Cursor="SizeWestEast"
-                                Grid.RowSpan="2"/>
-                        
-                        <Border Name="{x:Static local:Drawer.PART_ResizeRight}"
+                                Grid.RowSpan="2" />
+
+                        <Border Grid.Row="0"
+                                Name="{x:Static local:Drawer.PART_ResizeRight}"
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Stretch"
                                 Width="4"
                                 Background="Transparent"
                                 Cursor="SizeWestEast"
-                                Grid.RowSpan="2"/>
-                        
-                        <Border Name="{x:Static local:Drawer.PART_ResizeTop}"
+                                Grid.RowSpan="2" />
+
+                        <Border Grid.Row="0"
+                                Name="{x:Static local:Drawer.PART_ResizeTop}"
                                 VerticalAlignment="Top"
                                 HorizontalAlignment="Stretch"
                                 Height="4"
                                 Background="Transparent"
-                                Cursor="SizeNorthSouth"
-                                Grid.Row="0"/>
+                                Cursor="SizeNorthSouth" />
                     </Grid>
                 </Border>
             </ControlTemplate>
         </Setter>
 
-        <Style Selector="^:closed">
-            <Setter Property="Height" Value="{Binding HeaderHeight, RelativeSource={RelativeSource Self}}" />
-            <Style Selector="^ /template/ PathIcon#ToggleIcon">
-                <Setter Property="Data" Value="M 4 10 L 12 18 L 20 10" />
-            </Style>
-            <Style Selector="^ /template/ ContentPresenter">
-                <Setter Property="IsVisible" Value="False" />
-            </Style>
-            <Style Selector="^ /template/ Border#PART_ResizeTop">
-                <Setter Property="IsHitTestVisible" Value="False" />
+        <Style Selector="^:open">
+            <Style Selector="^ /template/ fi|SymbolIcon#ToggleIcon">
+                <Setter Property="Symbol" Value="ChevronDown" />
             </Style>
         </Style>
-        
-        <Style Selector="^:open">
-             <Style Selector="^ /template/ PathIcon#ToggleIcon">
-                <Setter Property="Data" Value="M 4 14 L 12 6 L 20 14" />
+
+        <Style Selector="^:not(:open)">
+            <Style Selector="^ /template/ fi|SymbolIcon#ToggleIcon">
+                <Setter Property="Symbol" Value="ChevronUp" />
             </Style>
         </Style>
 
