--- a/src/Huskui.Avalonia/Controls/DrawerHost.axaml
+++ b/src/Huskui.Avalonia/Controls/DrawerHost.axaml
@@ -1,5 +1,20 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!-- Add Resources Here -->
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="https://github.com/d3ara1n/Huskui.Avalonia">
+    <ControlTheme x:Key="{x:Type local:DrawerHost}" TargetType="local:DrawerHost">
+        <Setter Property="HorizontalAlignment" Value="Stretch" />
+        <Setter Property="VerticalAlignment" Value="Stretch" />
+        <Setter Property="Template">
+            <ControlTemplate>
+                <ItemsControl ItemsSource="{Binding Items,Mode=OneWay,RelativeSource={RelativeSource TemplatedParent}}"
+                              Margin="{TemplateBinding Padding}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <local:DrawerPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+            </ControlTemplate>
+        </Setter>
+    </ControlTheme>
 </ResourceDictionary>
-
