--- a/src/Huskui.Avalonia/Controls/Menu.axaml
+++ b/src/Huskui.Avalonia/Controls/Menu.axaml
@@ -6,6 +6,7 @@
         <Panel Background="White">
             <StackPanel Margin="24">
                 <Menu>
+                    <MenuItem Header="New" />
                     <MenuItem Header="Open" ToggleType="Radio" IsChecked="True" />
                     <Separator />
                     <MenuItem Header="Close" ToggleType="CheckBox" IsChecked="True" InputGesture="Ctrl+C" />
@@ -92,7 +93,7 @@
                                                    Foreground="{StaticResource ControlSecondaryForegroundBrush}"
                                                    FontSize="{TemplateBinding FontSize}"
                                                    HorizontalAlignment="Right" VerticalAlignment="Center" />
-                                    <fi:SymbolIcon Name="ExpandMark" Symbol="ArrowRight"
+                                    <fi:SymbolIcon Name="ExpandMark" Symbol="ChevronRight"
                                                    IsVisible="False"
                                                    Foreground="{StaticResource ControlSecondaryForegroundBrush}"
                                                    FontSize="{TemplateBinding FontSize}"
@@ -169,7 +170,7 @@
     <ControlTheme x:Key="TopMenuItemTheme" TargetType="MenuItem">
         <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
         <Setter Property="Background" Value="{StaticResource TransparentBrush}" />
-        <Setter Property="Padding" Value="12,8" />
+        <Setter Property="Padding" Value="10,6" />
         <Setter Property="ClipToBounds" Value="True" />
         <Setter Property="FontSize" Value="{StaticResource MediumFontSize}" />
         <Setter Property="Template">
@@ -185,7 +186,7 @@
                         </Transitions>
                     </Border.Transitions>
                     <Panel>
-                        <Grid ColumnDefinitions="*,4,Auto,4,Auto" Margin="{TemplateBinding Padding}">
+                        <Grid ColumnDefinitions="*,Auto,Auto" Margin="{TemplateBinding Padding}">
                             <ContentPresenter Grid.Column="0" Name="PART_ContentPresenter"
                                               Content="{TemplateBinding Header}"
                                               ContentTemplate="{TemplateBinding HeaderTemplate}"
@@ -198,24 +199,17 @@
                                 </ContentPresenter.Transitions>
                             </ContentPresenter>
 
-                            <Panel Grid.Column="2">
-                                <TextBlock x:Name="PART_InputGestureText" VerticalAlignment="Center"
-                                           Foreground="{StaticResource ControlSecondaryForegroundBrush}"
-                                           Text="{TemplateBinding InputGesture,Converter={x:Static local:InternalConverters.KeyGestureToString}}" />
-                            </Panel>
+                            <TextBlock Grid.Column="1" x:Name="PART_InputGestureText" Margin="4,0,0,0"
+                                       VerticalAlignment="Center"
+                                       IsVisible="{Binding InputGesture,RelativeSource={RelativeSource TemplatedParent}, Converter={x:Static ObjectConverters.IsNotNull}}"
+                                       Foreground="{StaticResource ControlSecondaryForegroundBrush}"
+                                       Text="{TemplateBinding InputGesture,Converter={x:Static local:InternalConverters.KeyGestureToString}}" />
 
-                            <Panel Grid.Column="4">
-                                <fi:SymbolIcon Name="ExpandMark" Symbol="ArrowRight"
-                                               IsVisible="False"
-                                               Foreground="{StaticResource ControlSecondaryForegroundBrush}"
-                                               FontSize="{TemplateBinding FontSize}"
-                                               HorizontalAlignment="Right" VerticalAlignment="Center" />
-                                <fi:SymbolIcon Name="Checkbox" Symbol="CheckboxUnchecked"
-                                               IsVisible="False"
-                                               Foreground="{StaticResource ControlSecondaryForegroundBrush}"
-                                               FontSize="{TemplateBinding FontSize}"
-                                               HorizontalAlignment="Right" VerticalAlignment="Center" />
-                            </Panel>
+                            <fi:SymbolIcon Grid.Column="2" Name="Checkbox" Symbol="CheckboxUnchecked"
+                                           IsVisible="False" Margin="4,0,0,0"
+                                           Foreground="{StaticResource ControlSecondaryForegroundBrush}"
+                                           FontSize="{TemplateBinding FontSize}"
+                                           HorizontalAlignment="Right" VerticalAlignment="Center" />
                         </Grid>
                         <Popup Name="PART_Popup"
                                IsLightDismissEnabled="False"
@@ -257,10 +251,6 @@
             <Style Selector="^ /template/ Border#Border">
                 <Setter Property="Background" Value="{StaticResource OverlayFullBackgroundBrush}" />
             </Style>
-        </Style>
-
-        <Style Selector="^:not(:empty) /template/ fi|SymbolIcon#ExpandMark">
-            <Setter Property="IsVisible" Value="True" />
         </Style>
 
         <Style Selector="^:toggle /template/ fi|SymbolIcon#Checkbox">
