fix(Gallery): 修正部分对话框的布局

--- a/src/Huskui.Gallery/Dialogs/DeleteConfirmationDialog.axaml
+++ b/src/Huskui.Gallery/Dialogs/DeleteConfirmationDialog.axaml
@@ -11,7 +11,7 @@
              SecondaryText="Cancel"
              IsPrimaryButtonVisible="True">
 
-    <StackPanel Spacing="20" Width="400" Margin="24">
+    <StackPanel Spacing="20" Width="400">
 
         <!-- Warning Icon and Message -->
         <StackPanel Spacing="16" HorizontalAlignment="Center">
