fix(Controls): 修复 PipsPager 会吸引 ScrollViewer 焦点

--- a/src/Huskui.Avalonia/Controls/PipsPager.axaml
+++ b/src/Huskui.Avalonia/Controls/PipsPager.axaml
@@ -21,6 +21,7 @@
                     </Border.Transitions>
                     <ListBox HorizontalAlignment="Center"
                              SelectionMode="AlwaysSelected"
+                             AutoScrollToSelectedItem="False"
                              SelectedIndex="{TemplateBinding SelectedIndex,Mode=TwoWay}"
                              ItemsSource="{TemplateBinding ItemCount,Converter={x:Static local:InternalConverters.CountToArray}}">
                         <ListBox.ItemsPanel>
